# tree-sitter-shopware-twig

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  package.yml  release.yml
bindings/c/: tree-sitter-shopware-twig.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_shopware_twig/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterShopwareTwig/: shopware_twig.h
bindings/swift/TreeSitterShopwareTwigTests/: TreeSitterShopwareTwigTests.swift
docs/: PLAN-twig-comments.md  TASK-twig-comments.md  script-tag-implementation-plan.md  style-tag-implementation-plan.md
queries/: injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: blocks.txt  html.txt
