[package]
name = "tree-sitter-shopware-twig"
description = "A parser for Shopware 6 Twig"
version = "0.1.0"
authors = ["Nils Haberkamp <haberkamp.n@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "shopware-twig"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://www.github.com/haberkamp/tree-sitter-shopware-twig"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
